--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ EXPRESS_PORT=3000
 EXPRESS_HOST="localhost"
 EXPRESS_EXPIRE=60000
 
+MONGODB_URI=mongodb://mongo:kJGuXAFhJHjUHnqJztfZzgZVPnvfBben@junction.proxy.rlwy.net:36804
