--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "concurrently \"vite build\" \"node --watch --env-file .env server/app.js\" ",
     "dev:src": "vite",
